apps/base/billing-rmq/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-rmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-rmq
  template:
    metadata:
      labels:
        app: billing-rmq
    spec:
      containers:
      - name: billing-rmq
        image: placeholder
        ports:
        - containerPort: 8080
