apps/base/billing-rmq/service.yml
apiVersion: v1
kind: Service
metadata:
  name: billing-rmq
spec:
  selector:
    app: billing-rmq
  ports:
  - port: 80
    targetPort: 8080
