apps/base/billing-rmq/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-rmq
spec:
  rules:
  - host: "placeholder.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: billing-rmq
            port:
              number: 80
